Fixed Center alignment issue, so my design would not look like shit

--- a/src/app/navigation/navigation-sidebar/navigation-sidebar.component.scss
+++ b/src/app/navigation/navigation-sidebar/navigation-sidebar.component.scss
@@ -6,9 +6,8 @@
   color: black;
   background-color: white;
   font-size: 1.6rem;
-  // font-weight: 500;
   letter-spacing: .1rem;
-  box-shadow: 0  0 .3rem 0 rgba(0, 0, 0, .2);
+  
 
   &__community{
       // min-width: 10rem;
